--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: make
       uses: docker://teeed/stm32-toolchain-make-action
     - name: Move artifacts
-      run: mkdir artifacts && cp build/canpybara.bin build/canpybara.hex build/canpybara.elf artifacts/
+      run: mkdir artifacts && cp build/canpybara_bootloader.bin build/canpybara_bootloader.hex build/canpybara_bootloader.elf artifacts/
     - name: Upload artifacts
       uses: actions/upload-artifact@v1.0.0
       with:
